--- a/Desktop/learning_css/grid/style.css
+++ b/Desktop/learning_css/grid/style.css
@@ -50,8 +50,10 @@ body{
 
 
 .container1 {
+    height: 50%;
     display: grid;
-    grid-template-columns: repeat(12,1fr);
+    grid-template-columns: repeat(12,2fr);
+    grid-template-rows: 50px 1fr 50px;
 }
 
 .header{
@@ -67,6 +69,12 @@ body{
     /* grid-column: 1/3; */
     /* grid-column: 1/ span 2; */
      grid-column: 1 / -1; 
+}
+
+.content {
+    grid-column: 2/-1;
+
+
 }
 
 
